// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeCard /> should be render correctly 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
      data-uitestid="range-card"
    >
      <div
        class="image card-image -expand -plain"
        data-uitestid="range-card_img-wrapper"
      >
        <span
          style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
        >
          <img
            class="image--native"
            data-nimg="fill"
            data-testid="card-image"
            data-uitestid="range-card_img"
            decoding="async"
            sizes="100vw"
            src="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=3840&q=60"
            srcset="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=3840&q=60 3840w"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
          />
          <noscript />
        </span>
      </div>
      <div
        class="title"
        data-uitestid="range-card_title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          data-uitestid="range-card"
          href="/bmw-car-leasing/2-series.html"
        >
          2 Series
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <div
            class="price--inner"
          >
            <span
              class="price--sub"
            >
              £
            </span>
            <span
              class="price--pounds"
            >
              191
            </span>
            <span
              class="price--sub"
            >
              .
              91
            </span>
          </div>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          data-uitestid="range-card_view-all-button"
          href="/bmw-car-leasing/2-series.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`<RangeCard /> should be render correctly with all makes page 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
      data-uitestid="range-card"
    >
      <div
        class="image card-image -expand -plain"
        data-uitestid="range-card_img-wrapper"
      >
        <span
          style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
        >
          <img
            class="image--native"
            data-nimg="fill"
            data-testid="card-image"
            data-uitestid="range-card_img"
            decoding="async"
            sizes="100vw"
            src="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=3840&q=60"
            srcset="/_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=640&q=60 640w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=750&q=60 750w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=828&q=60 828w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1080&q=60 1080w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1200&q=60 1200w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=1920&q=60 1920w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=2048&q=60 2048w, /_next/image?url=https%3A%2F%2Fimages.autorama.co.uk%2FPhotos%2FCap%2FVehicles%2F126268%2Fcap-68051-126268.jpg&w=3840&q=60 3840w"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;"
          />
          <noscript />
        </span>
      </div>
      <div
        class="title"
        data-uitestid="range-card_title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          data-uitestid="range-card"
          href="/bmw-car-leasing.html"
        >
          bmw
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <div
            class="price--inner"
          >
            <span
              class="price--sub"
            >
              £
            </span>
            <span
              class="price--pounds"
            >
              191
            </span>
            <span
              class="price--sub"
            >
              .
              91
            </span>
          </div>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          data-uitestid="range-card_view-all-button"
          href="/bmw-car-leasing.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;
